--- a/src/styles/ShapeListItem.module.scss
+++ b/src/styles/ShapeListItem.module.scss
@@ -33,6 +33,9 @@
     line-height: 1.5;
     padding: 2px 0 2px 2px;
     color: var(--foreground-color);
+    &:focus-visible {
+        outline: none;
+    }
 }
 
 .shape-list-item-input {
