--- a/src/styles/ShapeListMenu.module.scss
+++ b/src/styles/ShapeListMenu.module.scss
@@ -17,6 +17,7 @@
         background-color: var(--hover-highlight);
     }
     &:focus {
+        background-color: var(--hover-highlight);
         outline: none;
     }
 }
@@ -49,6 +50,10 @@
         background-color: var(--hover-highlight);
     }
     &:focus {
-        outline: none;
+        outline: 0;
+        background-color: var(--hover-highlight);
+        border-style: solid;
+        border-width: 0 0 1px 1px;
+        border-bottom-color: var(--border-color);
     }
 }
