--- a/src/styles/Menu.module.scss
+++ b/src/styles/Menu.module.scss
@@ -1,7 +1,39 @@
 .menu-window {
     background-color: var(--background-color);
-    border-style: solid;
-    border-width: 1px;
-    border-color: var(--border-color);
+    border: 1px solid var(--border-color);
     min-height: 457px;
+}
+
+.row {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.line {
+    color: var(--border-color);
+    background-color: var(--border-color);
+    height: 1px;
+    margin: 5px 0 5px 0;
+}
+
+.container {
+    margin: 5px auto 5px auto;
+}
+
+.text {
+    color: var(--foreground-color);
+    font-size: 1.15rem;
+    padding-bottom: 5px;
+}
+
+.button {
+    background-color: var(--background-color);
+    color: var(--foreground-color);
+    width: 100%;
+    margin: 0;
+    border-width: 1px;
+    border: 1px solid var(--border-color);
+    &:hover {
+        color: var(--foreground-color);
+    }
 }
