--- a/src/styles/ParameterBox.module.scss
+++ b/src/styles/ParameterBox.module.scss
@@ -21,5 +21,5 @@
     color: var(--foreground-color);
     border: none;
     outline: none;
-    background-color: var(--background-color);
+    background-color: var(--input-bg-color);
 }
