--- a/src/styles/ShapeListItem.module.scss
+++ b/src/styles/ShapeListItem.module.scss
@@ -44,7 +44,7 @@
     padding: 2px 0 2px 2px;
     color: var(--foreground-color);
     border: 0;
-    background-color: var(--background-color);
+    background-color: var(--input-bg-color);
     &:focus {
         outline: none;
         border: none !important;
