:children_crossing: ExportModalからも重複点の削除設定ができるように

--- a/src/styles/ExportModal.module.scss
+++ b/src/styles/ExportModal.module.scss
@@ -77,7 +77,7 @@
     color: var(--border-color);
     background-color: var(--border-color);
     height: 1px;
-    margin: 5px 0 5px 0;
+    margin: 5px 8px 5px 8px;
 }
 
 .text {
@@ -94,6 +94,8 @@
     border: none;
     outline: none;
     background-color: var(--input-bg-color);
+    border: 1px solid var(--border-color);
+    border-radius: 0.25rem;
 }
 
 .button {
