--- a/src/styles/ShapeListItem.module.scss
+++ b/src/styles/ShapeListItem.module.scss
@@ -2,7 +2,7 @@
     background-color: var(--background-color);
     color: var(--foreground-color);
     width: 100%;
-    border-radius: unset !important;
+    border-radius: unset;
     padding: 0;
     border-width: 1px !important;
     outline: 1px solid var(--border-color);
@@ -17,15 +17,17 @@
         outline: 1px solid var(--border-color);
         z-index: 0;
     }
-}
 
-.shape-list-item-active {
-    background-color: var(--select-highlight) !important;
-    margin-top: 0 !important;
-    border-width: 1px !important;
-    outline: 1px solid var(--border-color) !important;
-    border-color: var(--select-highlight) !important;
-    z-index: 0 !important;
+    &:active,
+    &.active {
+        background-color: var(--select-highlight);
+        border-radius: unset;
+        margin-top: 0 !important;
+        border-width: 1px;
+        outline: 1px solid var(--border-color);
+        border-color: var(--select-highlight);
+        z-index: 0;
+    }
 }
 
 .shape-list-item-text {
