--- a/src/styles/Inspector.module.scss
+++ b/src/styles/Inspector.module.scss
@@ -5,6 +5,18 @@
     border-color: var(--border-color);
     min-height: 250px;
     max-height: 430px;
+    overflow: auto;
+    scrollbar-width: thin;
+    &::-webkit-scrollbar {
+        width: 4px;
+        border-radius: 0.25rem !important;
+    }
+    &::-webkit-scrollbar-track {
+        background-color: rgba(75, 75, 75, 0.5);
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: rgb(128, 128, 128);
+    }
 }
 
 .inspector-param-box-container {
