:lipstick: 生のbootstrap指定を撲滅する会

--- a/src/styles/Inspector.module.scss
+++ b/src/styles/Inspector.module.scss
@@ -5,6 +5,7 @@
     border-color: var(--border-color);
     min-height: 250px;
     max-height: 430px;
+    border-radius: 0.25rem;
     overflow: auto;
     scrollbar-width: thin;
     &::-webkit-scrollbar {
