--- a/src/styles/Menu.module.scss
+++ b/src/styles/Menu.module.scss
@@ -1,6 +1,7 @@
 .menu-window {
     background-color: var(--background-color);
     border: 1px solid var(--border-color);
+    border-radius: 0.25rem;
 }
 
 .container {
