--- a/src/styles/ShapeListMenu.module.scss
+++ b/src/styles/ShapeListMenu.module.scss
@@ -13,6 +13,7 @@
     padding: 2px 0 2px 2px;
     width: 70%;
     border: none;
+    border-radius: 0.25rem;
     &:hover {
         background-color: var(--hover-highlight);
     }
