--- a/src/styles/Inspector.module.scss
+++ b/src/styles/Inspector.module.scss
@@ -10,13 +10,10 @@
     scrollbar-width: thin;
     &::-webkit-scrollbar {
         width: 4px;
-        border-radius: 0.25rem !important;
-    }
-    &::-webkit-scrollbar-track {
-        background-color: rgba(75, 75, 75, 0.5);
     }
     &::-webkit-scrollbar-thumb {
         background-color: rgb(128, 128, 128);
+        border-radius: 0.25rem;
     }
 }
 
