--- a/src/styles/ShapeList.module.scss
+++ b/src/styles/ShapeList.module.scss
@@ -14,15 +14,13 @@
     padding-bottom: 1px;
     margin-bottom: 5px;
     overflow:auto;
+    padding-right: 0;
     scrollbar-width: thin;
     &::-webkit-scrollbar {
         width: 4px;
-        border-radius: 0.25rem !important;
-    }
-    &::-webkit-scrollbar-track {
-        background-color: rgba(75, 75, 75, 0.5);
     }
     &::-webkit-scrollbar-thumb {
         background-color: rgb(128, 128, 128);
+        border-radius: 0.25rem;
     }
 }
