--- a/src/styles/ParameterBox.module.scss
+++ b/src/styles/ParameterBox.module.scss
@@ -7,7 +7,7 @@
 }
 
 .param-box-name {
-    color: var(--foreground-color);
+    color: var(--text-color);
     line-height: 1.5;
     padding: 2px 0 2px 2px;
     border-style: solid;
@@ -19,7 +19,7 @@
     width: 100%;
     line-height: 1.5;
     padding: 2px 0 2px 2px;
-    color: var(--foreground-color);
+    color: var(--text-color);
     border: none;
     outline: none;
     background-color: var(--input-bg-color);
