--- a/src/styles/Previewer.module.scss
+++ b/src/styles/Previewer.module.scss
@@ -1,5 +1,5 @@
 .previewer-window {
-    background-color: var(--background-color);
+    background-color: var(--window-bg-color);
     border-style: solid;
     border-width: 1px;
     border-color: var(--border-color);
