--- a/src/styles/ShapeListMenu.module.scss
+++ b/src/styles/ShapeListMenu.module.scss
@@ -8,7 +8,7 @@
 .shape-list-menu-pulldown {
     background: none;
     height: 100%;
-    color: var(--foreground-color);
+    color: var(--text-color);
     line-height: 1.5;
     padding: 2px 0 2px 2px;
     width: 70%;
@@ -24,22 +24,22 @@
 }
 
 .shape-list-menu-pulldown-option {
-    background-color: var(--background-color);
-    color: var(--foreground-color);
+    background-color: var(--window-bg-color);
+    color: var(--text-color);
     padding-left: 2px;
     border: none;
     &:hover {
         background-color: var(--hover-highlight);
     }
     &:focus {
-        background-color: var(--background-color);
+        background-color: var(--window-bg-color);
         outline: none;
     }
 }
 
 .shape-list-menu-add {
     background: none;
-    color: var(--foreground-color);
+    color: var(--text-color);
     height: 100%;
     width: 30%;
     border-width: 0 0 0 1px;
