:lipstick: previewerの諸々の色もCSSに依存させる

--- a/src/styles/ExportModal.module.scss
+++ b/src/styles/ExportModal.module.scss
@@ -5,7 +5,7 @@
     bottom: 0;
     right: 0;
     left: 0;
-    background-color: var(--context-overlay-color);
+    background-color: var(--modal-overlay-color);
     opacity: 0;
     transition-property: opacity;
     transition-duration: 400ms;
