--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,7 +7,10 @@
     --hover-highlight: rgb(48, 48, 48);
     --select-highlight: rgb(80, 80, 80);
     --scrollbar-color: rgb(128, 128, 128);
-    --context-overlay-color: rgba(0, 0, 0, 0.6);
+    --modal-overlay-color: rgba(0, 0, 0, 0.6);
+    --grid-center-color: rgb(64, 64, 64);
+    --grid-block-color: rgb(96, 96, 96);
+    --grid-double-color: rgb(32, 32, 32);
 }
 
 body {
