:bug: ショートカットキーがfocusしていないと動作しないのを修正
commit 4797467931ca7e239c15f608a5c3612f5b990673
Author: ChenCMD <scnmed.g@gmail.com>
Date:   Sat Jul 17 03:44:18 2021 +0900

    :bug: ショートカットキーがfocusしていないときに動作しないのを修正

commit 608d2a9f32e7550c97207844d50cf45b0a35829d
Author: ChenCMD <scnmed.g@gmail.com>
Date:   Sat Jul 17 00:42:14 2021 +0900

    :children_crossing: ショートカットキーをfocusしてなくても使える様に

--- a/src/styles/ShapesGenerator.module.scss
+++ b/src/styles/ShapesGenerator.module.scss
@@ -1,5 +1,9 @@
 .shapes-generator {
-    padding: 7px
+    padding: 7px;
+    &:focus {
+        outline: none;
+        border: none;
+    }
 }
 
 .col-previewer {
