--- a/src/styles/ParameterBox/Range.module.scss
+++ b/src/styles/ParameterBox/Range.module.scss
@@ -1,3 +1,7 @@
+.container {
+    padding: 0;
+}
+
 .param-box {
     margin: 10px 0 10px 0;
     width: 100%;
@@ -24,4 +28,19 @@
     outline: none;
     background-color: var(--input-bg-color);
     border-radius: 0.25rem;
+}
+
+.slider {
+    padding: 0;
+}
+
+.unit {
+    color: var(--text-color);
+    text-align: center;
+    line-height: 1.5;
+    padding: 2px 0 2px 0;
+    height: 100%;
+    border-style: solid;
+    border-color: var(--border-color);
+    border-left: 1px;
 }
