:bug: webkit非対応環境で壊れるのを(雑に)修正

--- a/src/styles/Previewer.module.scss
+++ b/src/styles/Previewer.module.scss
@@ -1,7 +1,6 @@
 .previewer-window {
     background-color: var(--window-bg-color);
-    border-style: solid;
-    border-width: 1px;
-    border-color: var(--border-color);
+    border: var(--border-color) solid 1px;
     border-radius: 0.25rem;
+    min-height: 100%;
 }
