--- a/src/styles/Inspector.module.scss
+++ b/src/styles/Inspector.module.scss
@@ -1,4 +1,4 @@
-.inspector {
+.window {
     background-color: var(--window-bg-color);
     border-style: solid;
     border-width: 1px;
@@ -17,6 +17,6 @@
     }
 }
 
-.inspector-param-box-container {
+.container {
     margin: 5px auto 5px auto;
 }
