--- a/src/styles/Previewer.module.scss
+++ b/src/styles/Previewer.module.scss
@@ -1,4 +1,4 @@
-.previewer-window {
+.window {
     background-color: var(--window-bg-color);
     border: var(--border-color) solid 1px;
     border-radius: 0.25rem;
