--- a/src/styles/Menu.module.scss
+++ b/src/styles/Menu.module.scss
@@ -1,4 +1,4 @@
-.menu-window {
+.window {
     background-color: var(--window-bg-color);
     border: 1px solid var(--border-color);
     border-radius: 0.25rem;
