--- a/src/styles/ParameterBox/Normal.module.scss
+++ b/src/styles/ParameterBox/Normal.module.scss
@@ -1,8 +1,4 @@
-.container {
-    padding: 0;
-}
-
-.param-box {
+.window {
     margin: 10px 0 10px 0;
     width: 100%;
     border-width: 1px;
@@ -10,7 +6,7 @@
     border-radius: 0.25rem;
 }
 
-.param-box-name {
+.name {
     color: var(--text-color);
     line-height: 1.5;
     padding: 2px 0 2px 2px;
@@ -19,7 +15,11 @@
     border-color: var(--border-color);
 }
 
-.param-box-input {
+.container {
+    padding: 0;
+}
+
+.input {
     width: 100%;
     line-height: 1.5;
     padding: 2px 0 2px 2px;
