--- a/src/styles/ShapeList.module.scss
+++ b/src/styles/ShapeList.module.scss
@@ -1,4 +1,4 @@
-.shape-list-window {
+.window {
     background-color: var(--window-bg-color);
     border-style: solid;
     border-width: 1px;
@@ -9,7 +9,7 @@
     border-radius: 0.25rem;
 }
 
-.shape-list {
+.list {
     max-height: 420px;
     padding-bottom: 1px;
     margin-bottom: 5px;
