--- a/src/styles/ShapeList.module.scss
+++ b/src/styles/ShapeList.module.scss
@@ -3,9 +3,8 @@
     border-style: solid;
     border-width: 1px;
     border-color: var(--border-color);
-    min-height: 260px;
-    max-height: 457px;
-    margin-bottom: 5px;
+    min-height: calc(50vh - 10px - 8px * 2);
+    max-height: calc(50vh - 10px - 8px * 2);
     border-radius: 0.25rem;
 }
 
