--- a/src/styles/UserInterface.module.scss
+++ b/src/styles/UserInterface.module.scss
@@ -1,9 +1,9 @@
 .user-interface {
-    padding: 7px !important;
+    padding: 0;
 }
 
 .col-inspector {
-    padding: 0 8px 8px 8px !important;
+    padding: 8px !important;
 }
 
 .col-shape-list {
