--- a/src/styles/Menu.module.scss
+++ b/src/styles/Menu.module.scss
@@ -2,6 +2,8 @@
     background-color: var(--window-bg-color);
     border: 1px solid var(--border-color);
     border-radius: 0.25rem;
+    min-height: calc(50vh - 10px - 8px * 2);
+    max-height: calc(50vh - 10px - 8px * 2);
 }
 
 .container {
