--- a/src/styles/Inspector.module.scss
+++ b/src/styles/Inspector.module.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .window {
     background-color: var(--window-bg-color);
     border-style: solid;
@@ -23,6 +25,6 @@
 
 .xxl {
     @media screen and (min-width: 1500px) {
-        flex: 0 0 (100% / 3);
+        flex: 0 0 math.div(100%, 3);
     }
 }
