--- a/src/styles/ContextMenu.module.scss
+++ b/src/styles/ContextMenu.module.scss
@@ -31,6 +31,13 @@
     }
 }
 
+.line {
+    color: var(--border-color);
+    background-color: var(--border-color);
+    height: 1px;
+    margin: 5px 0 5px 0;
+}
+
 .text {
     padding: 5px 50px 5px 5px;
     text-align: left;
