:sparkles: Exportデータに図形名のコメントを含めれるように
Close #26

--- a/src/styles/ExportModal.module.scss
+++ b/src/styles/ExportModal.module.scss
@@ -84,6 +84,10 @@
     margin: 5px 8px 5px 8px;
 }
 
+.button {
+    width: 77px !important;
+}
+
 .text {
     color: var(--text-color);
     font-size: 1.15rem;
