:children_crossing: エラーやクリップボードへのコピーを通知するように

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -22,8 +22,8 @@
         --scrollbar-color: #68727c;
         --modal-overlay-color: #00000099;
         --grid-center-color: #68727c;
-        --grid-block-color: #4C545C;
-        --grid-double-color: #2A3035;
+        --grid-block-color: #4c545c;
+        --grid-double-color: #2a3035;
     }
 }
 
