パラメータの値が不正な時に枠が赤くなるように
Squashed commit of the following:

commit a9198dcb64c4021abd6ee91bf6a9cdb9f8bf9408
Author: ChenCMD <scnmed.g@gmail.com>
Date:   Sat Jul 31 02:13:41 2021 +0900

    :adhesive_bandage: PosParameterBoxのYが記述漏れしてた

commit 25f33b9bf484fe59eb610e18c960d21f317b8ae3
Author: ChenCMD <scnmed.g@gmail.com>
Date:   Sat Jul 31 02:11:09 2021 +0900

    :lipstick: エラー表示が正常にされるように

commit 931cb3a85a6fbc1882d4fd531a0d2f49c4917c4b
Author: ChenCMD <scnmed.g@gmail.com>
Date:   Sat Jul 31 01:06:52 2021 +0900

    :construction: エラーの描画...が上手く行かなかった

commit 0bef9111df91e46b85938782a0ba5e45c051308f
Author: ChenCMD <scnmed.g@gmail.com>
Date:   Sat Jul 31 01:06:02 2021 +0900

    :construction: バリデーションを共通化

--- a/src/styles/ParameterBox/Normal.module.scss
+++ b/src/styles/ParameterBox/Normal.module.scss
@@ -1,9 +1,14 @@
-.window {
-    margin: 10px 0 10px 0;
-    width: 100%;
-    border-width: 1px;
-    border: 1px solid var(--border-color);
-    border-radius: 0.25rem;
+:global {
+    :local(.window) {
+        margin: 10px 0 10px 0;
+        width: 100%;
+        border-width: 1px;
+        border: 1px solid var(--border-color);
+        border-radius: 0.25rem;
+        &.error {
+            border-color: rgb(255, 0, 0);
+        }
+    }
 }
 
 .name {
