--- a/src/styles/ParameterBox/Pos.module.scss
+++ b/src/styles/ParameterBox/Pos.module.scss
@@ -33,6 +33,10 @@
     outline: none;
     background-color: var(--input-bg-color);
     border-radius: 0.25rem;
+    &-manipulated {
+        @extend .input;
+        cursor: pointer;
+    }
 }
 
 %unit {
